--- a/administrator/templates/isis/less/blocks/_toolbar.less
+++ b/administrator/templates/isis/less/blocks/_toolbar.less
@@ -158,7 +158,7 @@ html[dir=rtl] #toolbar #toolbar-help {
 	}
 }
 
-@media (max-width: 320px) {
+@media (max-width: @xs-max) {
 	.view-login .navbar-fixed-bottom {
 		display: none;
 	}
